Add chunking settings back in